// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ribbon matches snapshot with empty ribbonCopy prop 1`] = `
<Fragment>
  <styled.div>
    <Text
      block={false}
      bold={false}
      invert={true}
      size="small"
    />
  </styled.div>
</Fragment>
`;

exports[`Ribbon matches snapshot with ribbonCopy prop 1`] = `
<Fragment>
  <styled.div>
    <Text
      block={false}
      bold={false}
      invert={true}
      size="small"
    >
      TDS Ribbon
    </Text>
  </styled.div>
</Fragment>
`;
